# public/openapi.yaml
@@ -8,24 +8,7 @@ servers:
   - url: https://salesforce-mcp-server-seven.vercel.app
 
 components:
-  securitySchemes:
-    oauth:
-      type: oauth2
-      flows:
-        authorizationCode:
-          authorizationUrl: https://dev-bewgxkb5x5z82h04.us.auth0.com/authorize
-          tokenUrl: https://dev-bewgxkb5x5z82h04.us.auth0.com/oauth/token
-          scopes:
-            openid: Basic identity
-            profile: Access profile information
-            email: Access email
   schemas: {}
-
-security:
-  - oauth:
-      - openid
-      - profile
-      - email
 
 paths:
   /search:
